# gui-cnps

./: README.md  package-lock.json  package.json
src/: index.html  main.js  styles.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/config/: config.rs
src-tauri/src/functions/: functions.rs
src-tauri/src/languages/: assembly.rs  go.rs  html.rs  lua.rs  python.rs  rust.rs
src/scripts/: main.js
src/styles/: popup.css  styles.css
